--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Vishal Merani</title>
+  <title>Vishal Merani Programs</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     :root {
@@ -26,34 +26,39 @@
       font-family: 'Inter', sans-serif;
       background: var(--bg);
       color: var(--text);
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      padding: 40px 16px;
-      min-height: 100vh;
       overflow-x: hidden;
     }
 
     .slide-container {
       display: flex;
-      overflow-x: auto;
+      overflow-x: scroll;
       scroll-snap-type: x mandatory;
-      gap: 16px;
-      padding-bottom: 32px;
       -webkit-overflow-scrolling: touch;
-      width: 100%;
+      width: 100vw;
+      max-width: 100vw;
+      height: 100%;
+      scroll-behavior: smooth;
+    }
+
+    .slide-container::-webkit-scrollbar {
+      display: none;
     }
 
     .slide {
-      scroll-snap-align: center;
-      flex: 0 0 100%;
-      max-width: 390px;
-      margin: auto;
+      scroll-snap-align: start;
+      flex-shrink: 0;
+      width: 100vw;
+      max-width: 100vw;
+      padding: 40px 16px;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
     }
 
     .iphone-frame {
       background: var(--box-bg);
       border-radius: 36px;
+      max-width: 390px;
       width: 100%;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
       padding: 32px 24px;
@@ -64,14 +69,12 @@
       font-size: 1.5rem;
       font-weight: 600;
       margin-bottom: 0.25rem;
-      color: var(--text);
     }
 
     h2 {
       font-size: 1.3rem;
       font-weight: 500;
       margin-bottom: 0.24rem;
-      color: var(--text);
     }
 
     .subtitle {
@@ -166,13 +169,6 @@
       margin-top: 2rem;
     }
 
-    .link-group {
-      margin-top: 1.25rem;
-      display: flex;
-      flex-direction: column;
-      gap: 0.6rem;
-    }
-
     .plain-link {
       font-size: 0.85rem;
       color: var(--accent);
@@ -183,68 +179,106 @@
     .plain-link:hover {
       color: var(--accent-hover);
     }
+
+    /* Optional: Dot Indicator */
+    .dots {
+      text-align: center;
+      margin: 16px 0;
+    }
+
+    .dot {
+      display: inline-block;
+      height: 8px;
+      width: 8px;
+      margin: 0 4px;
+      background-color: var(--muted);
+      border-radius: 50%;
+      transition: background-color 0.3s;
+    }
+
+    .dot.active {
+      background-color: var(--accent);
+    }
   </style>
 </head>
 <body>
-  <div class="slide-container">
-    <!-- Slide 1 -->
-    <section class="iphone-frame slide">
-      <h1>This July,</h1>
-      <h2>Happiness Program</h2>
-      <p class="subtitle">with Vishal Ji & Vikram Ji</p>
-      <p class="subtitle">In person | English, Hindi</p>
-      <div class="info-block">
-        <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank">Register here</a>
-      </div>
-      <ul class="timeline">
-        <li><strong>24 Jul</strong> – Check-in from 2:00 PM</li>
-        <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
-        <li><strong>27 Jul</strong> – Program ends at 5:00 PM</li>
-        <li><strong>28 Jul</strong> – Check-out by 9:30 AM</li>
-      </ul>
-      <div class="info-block">
-        <p><strong>📍 Location</strong>
-        Art of Living International Center<br>
-        Bengaluru, Karnataka</p>
-        <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">View on Maps</a>
-      </div>
-      <div class="copy-box">
-        <input class="copy-input" type="text" value="Happiness Program | 25–27 July 2025" id="copyText" readonly>
-        <button class="copy-btn" onclick="copyToClipboard()">Copy</button>
-      </div>
-      <div class="footer">🧘‍♂️ Starts on 25 July 2025 | Bangalore ♡ Ashram</div>
-    </section>
 
-    <!-- Slide 2 -->
-    <section class="iphone-frame slide">
-      <h1>Deep Sleep & Anxiety Relief</h1>
-      <h2>New Techniques by Gurudev</h2>
-      <p class="subtitle">Curated by Gurudev for stress-free nights ✨</p>
-      <div class="info-block">
-        <p>🌊 Powerful breathwork to activate your vagus nerve</p>
-        <p>🌙 Sleep hygiene tips for deep, uninterrupted rest</p>
-        <p>⚡ Reset your nervous system & wake up refreshed</p>
-        <p><strong>Facilitator:</strong> Vishal Merani</p>
+  <div class="slide-container" id="slides">
+    <!-- Slide 1: Happiness Program -->
+    <div class="slide">
+      <div class="iphone-frame">
+        <h1>This July,</h1>
+        <h2>Happiness Program</h2>
+        <p class="subtitle">with Vishal Ji & Vikram Ji</p>
+        <p class="subtitle">In person | English, Hindi</p>
+
+        <div class="info-block">
+          <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank">Register here</a>
+        </div>
+
+        <ul class="timeline">
+          <li><strong>24 Jul</strong> – Check-in from 2:00 PM</li>
+          <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
+          <li><strong>27 Jul</strong> – Program ends at 5:00 PM</li>
+          <li><strong>28 Jul</strong> – Check-out by 9:30 AM</li>
+        </ul>
+
+        <div class="info-block">
+          <p><strong>📍 Location</strong>
+            Art of Living International Center<br>
+            Bengaluru, Karnataka
+          </p>
+          <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">View on Maps</a>
+        </div>
+
+        <div class="copy-box">
+          <input class="copy-input" type="text" value="Happiness Program | 25–27 July 2025" id="copyText1" readonly>
+          <button class="copy-btn" onclick="copyToClipboard('copyText1')">Copy</button>
+        </div>
+
+        <div class="footer">🧘‍♂️ Starts on 25 July 2025 | Bangalore ♡ Ashram</div>
       </div>
-      <ul class="timeline">
-        <li><strong>18–20 June 2025</strong></li>
-        <li><strong>Time:</strong> 7:30 PM – 10:00 PM</li>
-      </ul>
-      <div class="info-block">
-        <a href="https://aolt.in/883226" class="button" target="_blank">Register</a>
+    </div>
+
+    <!-- Slide 2: Sleep & Anxiety Program -->
+    <div class="slide">
+      <div class="iphone-frame">
+        <h1>🌙✨ This June, </h1>
+        <h2> we are with NEW Techniques for Deep Sleep & Anxiety Relief</h2>
+        <p class="subtitle">with Vishal Merani</p>
+        <div class="info-block">
+          <p>
+            😞 Struggling with stress, anxiety, or restless nights?<br>
+            🌊 Experience powerful breathwork curated by Gurudev.<br><br>
+
+            ✅ Calm anxiety with a proven protocol<br>
+            ✅ Sleep better with simple techniques<br>
+            ✅ Activate parasympathetic system naturally
+          </p>
+        </div>
+
+        <ul class="timeline">
+          <li><strong>18–20 June 2025</strong></li>
+          <li><strong>⏰ Time:</strong> 7:30 PM – 10:00 PM</li>
+        </ul>
+
+        <div class="info-block">
+          <a href="https://aolt.in/883226" class="button" target="_blank">Register</a>
+          <p style="margin-top: 8px;">
+            For help: Madhusmita Routray<br>
+            📞 9818503888<br>
+            📧 madhu.routray@gmail.com
+          </p>
+        </div>
+
+        <div class="copy-box">
+          <input class="copy-input" type="text" value="Sleep & Anxiety Relief | 18–20 June 2025" id="copyText2" readonly>
+          <button class="copy-btn" onclick="copyToClipboard('copyText2')">Copy</button>
+        </div>
+
+        <div class="footer">💤 18–20 June 2025 | Evening Online Sessions</div>
       </div>
-      <div class="info-block">
-        <p><strong>Need help?</strong></p>
-        <p>Madhusmita Routray<br>📞 9818503888<br>📧 madhu.routray@gmail.com</p>
-      </div>
-    </section>
+    </div>
   </div>
 
-  <script>
-    function copyToClipboard() {
-      const copyText = document.getElementById("copyText");
-      navigator.clipboard.writeText(copyText.value);
-    }
-  </script>
-</body>
-</html>
+  <!-- Dot Indicator -
