--- a/index.html
+++ b/index.html
@@ -26,31 +26,7 @@
       font-family: 'Inter', sans-serif;
       background: var(--bg);
       color: var(--text);
-      overflow-x: hidden;
-    }
-
-    .slide-container {
-      display: flex;
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      -webkit-overflow-scrolling: touch;
-      width: 100vw;
-      height: 100%;
-      scroll-behavior: smooth;
-    }
-
-    .slide-container::-webkit-scrollbar {
-      display: none;
-    }
-
-    .slide {
-      scroll-snap-align: start;
-      flex-shrink: 0;
-      width: 100vw;
-      padding: 40px 16px;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
+      padding: 24px 16px;
     }
 
     .iphone-frame {
@@ -58,6 +34,7 @@
       border-radius: 36px;
       max-width: 390px;
       width: 100%;
+      margin: 0 auto 32px auto;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
       padding: 32px 24px;
       border: 1px solid var(--border);
@@ -148,7 +125,7 @@
     .copy-btn {
       padding: 8px 12px;
       background-color: #E6E6FA;
-      color: black;
+      color: white;
       font-size: 0.8rem;
       font-weight: 600;
       border: none;
@@ -158,7 +135,6 @@
 
     .copy-btn:hover {
       background-color: #734f96;
-      color: white;
     }
 
     .footer {
@@ -178,128 +154,89 @@
     .plain-link:hover {
       color: var(--accent-hover);
     }
-
-    .dots {
-      text-align: center;
-      margin: 16px 0;
-    }
-
-    .dot {
-      display: inline-block;
-      height: 8px;
-      width: 8px;
-      margin: 0 4px;
-      background-color: var(--muted);
-      border-radius: 50%;
-      transition: background-color 0.3s;
-    }
-
-    .dot.active {
-      background-color: var(--accent);
-    }
   </style>
 </head>
 <body>
 
-  <div class="slide-container" id="slides">
-    <!-- Slide 1 -->
-    <div class="slide">
-      <div class="iphone-frame">
-        <h1>This July,</h1>
-        <h2>Happiness Program</h2>
-        <p class="subtitle">with Vishal Ji & Vikram Ji</p>
-        <p class="subtitle">In person | English, Hindi</p>
+  <!-- Card 1: June Sleep & Anxiety Program -->
+  <div class="iphone-frame">
+    <h1>🌙✨ This June, </h1>
+    <h2> we are with NEW Techniques for Deep Sleep & Anxiety Relief</h2>
+    <p class="subtitle">with Vishal Merani</p>
+    <div class="info-block">
+      <p>
+        😞 Struggling with stress, anxiety, or restless nights?<br>
+        🌊 Experience powerful breathwork curated by Gurudev.<br><br>
 
-        <div class="info-block">
-          <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank">Register here</a>
-        </div>
-
-        <ul class="timeline">
-          <li><strong>24 Jul</strong> – Check-in from 2:00 PM</li>
-          <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
-          <li><strong>27 Jul</strong> – Program ends at 5:00 PM</li>
-          <li><strong>28 Jul</strong> – Check-out by 9:30 AM</li>
-        </ul>
-
-        <div class="info-block">
-          <p><strong>📍 Location</strong>
-            Art of Living International Center<br>
-            Bengaluru, Karnataka
-          </p>
-          <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">View on Maps</a>
-        </div>
-
-        <div class="copy-box">
-          <input class="copy-input" type="text" value="Happiness Program | 25–27 July 2025" id="copyText1" readonly>
-          <button class="copy-btn" onclick="copyToClipboard('copyText1')">Copy</button>
-        </div>
-
-        <div class="footer">🧘‍♂️ Starts on 25 July 2025 | Bangalore ♡ Ashram</div>
-      </div>
+        ✅ Calm anxiety with a proven protocol<br>
+        ✅ Sleep better with simple techniques<br>
+        ✅ Activate parasympathetic system naturally
+      </p>
     </div>
 
-    <!-- Slide 2 -->
-    <div class="slide">
-      <div class="iphone-frame">
-        <h1>🌙✨ This June, </h1>
-        <h2> we are with NEW Techniques for Deep Sleep & Anxiety Relief</h2>
-        <p class="subtitle">with Vishal Merani</p>
-        <div class="info-block">
-          <p>
-            😞 Struggling with stress, anxiety, or restless nights?<br>
-            🌊 Experience powerful breathwork curated by Gurudev.<br><br>
+    <ul class="timeline">
+      <li><strong>18–20 June 2025</strong></li>
+      <li><strong>⏰ Time:</strong> 7:30 PM – 10:00 PM</li>
+    </ul>
 
-            ✅ Calm anxiety with a proven protocol<br>
-            ✅ Sleep better with simple techniques<br>
-            ✅ Activate parasympathetic system naturally
-          </p>
-        </div>
-
-        <ul class="timeline">
-          <li><strong>18–20 June 2025</strong></li>
-          <li><strong>⏰ Time:</strong> 7:30 PM – 10:00 PM</li>
-        </ul>
-
-        <div class="info-block">
-          <a href="https://aolt.in/883226" class="button" target="_blank">Register</a>
-          <p style="margin-top: 8px;">
-            For help: Madhusmita Routray<br>
-            📞 9818503888<br>
-            📧 madhu.routray@gmail.com
-          </p>
-        </div>
-
-        <div class="copy-box">
-          <input class="copy-input" type="text" value="Sleep & Anxiety Relief | 18–20 June 2025" id="copyText2" readonly>
-          <button class="copy-btn" onclick="copyToClipboard('copyText2')">Copy</button>
-        </div>
-
-        <div class="footer">💤 18–20 June 2025 | Evening Online Sessions</div>
-      </div>
+    <div class="info-block">
+      <a href="https://aolt.in/883226" class="button" target="_blank">Register</a>
+      <p style="margin-top: 8px;">
+        For help: Madhusmita Routray<br>
+        📞 9818503888<br>
+        📧 madhu.routray@gmail.com
+      </p>
     </div>
+
+    <div class="copy-box">
+      <input class="copy-input" type="text" value="Sleep & Anxiety Relief | 18–20 June 2025" id="copyText2" readonly>
+      <button class="copy-btn" onclick="copyToClipboard('copyText2')">Copy</button>
+    </div>
+
+    <div class="footer">💤 18–20 June 2025 | Evening Online Sessions</div>
   </div>
 
-  <div class="dots">
-    <span class="dot active"></span>
-    <span class="dot"></span>
+  <!-- Card 2: July Happiness Program -->
+  <div class="iphone-frame">
+    <h1>This July,</h1>
+    <h2>Happiness Program</h2>
+    <p class="subtitle">with Vishal Ji & Vikram Ji</p>
+    <p class="subtitle">In person | English, Hindi</p>
+
+    <div class="info-block">
+      <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank">Register here</a>
+    </div>
+
+    <ul class="timeline">
+      <li><strong>24 Jul</strong> – Check-in from 2:00 PM</li>
+      <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
+      <li><strong>27 Jul</strong> – Program ends at 5:00 PM</li>
+      <li><strong>28 Jul</strong> – Check-out by 9:30 AM</li>
+    </ul>
+
+    <div class="info-block">
+      <p><strong>📍 Location</strong>
+        Art of Living International Center<br>
+        Bengaluru, Karnataka
+      </p>
+      <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">View on Maps</a>
+    </div>
+
+    <div class="copy-box">
+      <input class="copy-input" type="text" value="Happiness Program | 25–27 July 2025" id="copyText1" readonly>
+      <button class="copy-btn" onclick="copyToClipboard('copyText1')">Copy</button>
+    </div>
+
+    <div class="footer">🧘‍♂️ Starts on 25 July 2025 | Bangalore ♡ Ashram</div>
   </div>
 
   <script>
     function copyToClipboard(id) {
-      const input = document.getElementById(id);
-      input.select();
-      input.setSelectionRange(0, 99999);
-      document.execCommand("copy");
+      var copyText = document.getElementById(id);
+      copyText.select();
+      copyText.setSelectionRange(0, 99999);
+      navigator.clipboard.writeText(copyText.value);
     }
-
-    const slides = document.getElementById("slides");
-    const dots = document.querySelectorAll(".dot");
-
-    slides.addEventListener("scroll", () => {
-      const index = Math.round(slides.scrollLeft / window.innerWidth);
-      dots.forEach(dot => dot.classList.remove("active"));
-      if (dots[index]) dots[index].classList.add("active");
-    });
   </script>
 </body>
 </html>
